--- a/src/components/FormContact.astro
+++ b/src/components/FormContact.astro
@@ -88,12 +88,11 @@ const t = useTranslations(lang);
         background-color: #c526263b;
     }
     .contact-form {
-        background-color: #f2f2f2;
+        background-color: #e2e2e2;
         padding: 1rem 1.5rem 2rem 1.5rem;
         border-radius: 10px;
     }
     html.dark .contact-form {
-        box-shadow: 0px 0px 5px 5px rgba(94, 93, 93, 0.2);
         background-color: #444444;
     }
 
