--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,7 +1,7 @@
 ---
 import HeaderLink from "./HeaderLink.astro";
 import { SITE_TITLE } from "../consts";
-import { useTranslations, getLangFromUrl } from "../i18n/tranlate";
+import { useTranslations, getLangFromUrl } from "../i18n/translate";
 import LanguageSelector from "./LanguageSelector.astro";
 
 const lang = getLangFromUrl(Astro.url);
@@ -19,7 +19,8 @@ const t = useTranslations(lang);
                 stroke-width="1.5"
                 stroke="currentColor"
                 class="size-6"
-                id="menu-button">
+                id="menu-button"
+            >
                 <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5"
                 ></path>
             </svg>
