--- a/src/components/LanguageSelector.astro
+++ b/src/components/LanguageSelector.astro
@@ -1,6 +1,6 @@
 ---
 import { languages } from "../i18n/ui";
-import { getLangFromUrl } from "../i18n/tranlate";
+import { getLangFromUrl } from "../i18n/translate";
 import type { HTMLAttributes } from "astro/types";
 
 type Props = HTMLAttributes<"select">;
