--- a/src/pages/[lang]/index.astro
+++ b/src/pages/[lang]/index.astro
@@ -1,7 +1,7 @@
 ---
 import Layout from "../../layouts/Layout.astro";
 import { SITE_DESCRIPTION, TEAM_MEMBERS } from "../../consts";
-import { useTranslations, getLangFromUrl } from "../../i18n/tranlate";
+import { useTranslations, getLangFromUrl } from "../../i18n/translate";
 import FormContact from "../../components/FormContact.astro";
 const FOUNDERS = Object.values(TEAM_MEMBERS).sort((a, b) => a.index - b.index);
 const t = useTranslations(getLangFromUrl(Astro.url));
