Change: move contact to page unique

--- a/src/components/FormContact.astro
+++ b/src/components/FormContact.astro
@@ -65,6 +65,9 @@ const t = useTranslations(lang);
     });
 </script>
 <style>
+    .contact-form {
+        width: 800px;
+    }
     .result {
         display: none;
         padding: 0.5rem 0;
