Add snow in all page

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -11,7 +11,7 @@ const t = useTranslations(lang);
 <header>
     <nav>
         <div class="menu">
-            <h2><a href="/">{SITE_TITLE}</a></h2>
+            <h2><a href="/">{SITE_TITLE}🎄</a></h2>
             <svg
                 xmlns="http://www.w3.org/2000/svg"
                 fill="none"
