--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -10,6 +10,7 @@ import BaseHead from "../components/BaseHead.astro";
 import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
 import ThemeIcon from "../components/ThemeIcon.astro";
+import Snow from "../components/Snow.astro";
 ---
 
 <!doctype html>
@@ -22,5 +23,6 @@ import ThemeIcon from "../components/ThemeIcon.astro";
         <slot />
         <ThemeIcon />
         <Footer />
+        <Snow />
     </body>
 </html>
