add card of project UI

--- a/src/pages/[lang]/index.astro
+++ b/src/pages/[lang]/index.astro
@@ -29,9 +29,15 @@ const lang = getLangFromUrl(Astro.url);
         <h3>{t("projects.title")}</h3>
         <CardProyect
             name="FullLite"
-            description="Template ligero para applicaciones full stack"
-            image="/proyects/animal.svg"
+            description="Template ligero para aplicaciones full stack"
+            image="/projects/animal.svg"
             link="https://full-lite.vercel.app/"
+        />
+        <CardProyect
+            name="CROBF-UI"
+            description="Librería de componentes para CSS"
+            image="/projects/logo-ui.png"
+            link="https://crobf-ui.vercel.app/"
         />
     </main>
 </Layout>
