--- a/src/pages/[lang]/about.astro
+++ b/src/pages/[lang]/about.astro
@@ -32,6 +32,8 @@ const t = useTranslations(getLangFromUrl(Astro.url));
                     github={TEAM_MEMBERS.Juan.gitHub}
                     linkedin={TEAM_MEMBERS.Juan.linkedin}
                     link={TEAM_MEMBERS.Juan.link}
+                    profession={TEAM_MEMBERS.Juan.profession}
+                    description={TEAM_MEMBERS.Juan.description}
                 />
                 <CardFounder
                     name={TEAM_MEMBERS.Ezequiel.fullName}
@@ -39,6 +41,8 @@ const t = useTranslations(getLangFromUrl(Astro.url));
                     github={TEAM_MEMBERS.Ezequiel.gitHub}
                     linkedin={TEAM_MEMBERS.Ezequiel.linkedin}
                     link={TEAM_MEMBERS.Ezequiel.link}
+                    profession={TEAM_MEMBERS.Ezequiel.profession}
+                    description={TEAM_MEMBERS.Ezequiel.description}
                 />
                 <CardFounder
                     name={TEAM_MEMBERS.Lautaro.fullName}
@@ -46,6 +50,8 @@ const t = useTranslations(getLangFromUrl(Astro.url));
                     github={TEAM_MEMBERS.Lautaro.gitHub}
                     linkedin={TEAM_MEMBERS.Lautaro.linkedin}
                     link={TEAM_MEMBERS.Lautaro.link}
+                    profession={TEAM_MEMBERS.Lautaro.profession}
+                    description={TEAM_MEMBERS.Lautaro.description}
                 />
                 <CardFounder
                     name={TEAM_MEMBERS.Valentina.fullName}
@@ -53,6 +59,8 @@ const t = useTranslations(getLangFromUrl(Astro.url));
                     github={TEAM_MEMBERS.Valentina.gitHub}
                     linkedin={TEAM_MEMBERS.Valentina.linkedin}
                     link={TEAM_MEMBERS.Valentina.link}
+                    profession={TEAM_MEMBERS.Valentina.profession}
+                    description={TEAM_MEMBERS.Valentina.description}
                 />
                 <CardFounder
                     name={TEAM_MEMBERS.Magali.fullName}
@@ -60,6 +68,8 @@ const t = useTranslations(getLangFromUrl(Astro.url));
                     github={TEAM_MEMBERS.Magali.gitHub}
                     linkedin={TEAM_MEMBERS.Magali.linkedin}
                     link={TEAM_MEMBERS.Magali.link}
+                    profession={TEAM_MEMBERS.Magali.profession}
+                    description={TEAM_MEMBERS.Magali.description}
                 />
             </div>
             <p set:html={t("about.team.values")} />
