--- a/src/pages/[lang]/about.astro
+++ b/src/pages/[lang]/about.astro
@@ -54,72 +54,99 @@ const t = useTranslations(getLangFromUrl(Astro.url));
                     description={TEAM_MEMBERS.Lautaro.description}
                 />
                 <CardFounder
-                    name={TEAM_MEMBERS.Valentina.fullName}
-                    image={TEAM_MEMBERS.Valentina.logo}
-                    github={TEAM_MEMBERS.Valentina.gitHub}
-                    linkedin={TEAM_MEMBERS.Valentina.linkedin}
-                    link={TEAM_MEMBERS.Valentina.link}
-                    profession={TEAM_MEMBERS.Valentina.profession}
-                    description={TEAM_MEMBERS.Valentina.description}
+                    name={TEAM_MEMBERS.Silvina.fullName}
+                    image={TEAM_MEMBERS.Silvina.logo}
+                    github={TEAM_MEMBERS.Silvina.gitHub}
+                    linkedin={TEAM_MEMBERS.Silvina.linkedin}
+                    link={TEAM_MEMBERS.Silvina.link}
+                    profession={TEAM_MEMBERS.Silvina.profession}
+                    description={TEAM_MEMBERS.Silvina.description}
                 />
                 <CardFounder
-                    name={TEAM_MEMBERS.Magali.fullName}
-                    image={TEAM_MEMBERS.Magali.logo}
-                    github={TEAM_MEMBERS.Magali.gitHub}
-                    linkedin={TEAM_MEMBERS.Magali.linkedin}
-                    link={TEAM_MEMBERS.Magali.link}
-                    profession={TEAM_MEMBERS.Magali.profession}
-                    description={TEAM_MEMBERS.Magali.description}
+                    name={TEAM_MEMBERS.Sofia.fullName}
+                    image={TEAM_MEMBERS.Sofia.logo}
+                    github={TEAM_MEMBERS.Sofia.gitHub}
+                    linkedin={TEAM_MEMBERS.Sofia.linkedin}
+                    link={TEAM_MEMBERS.Sofia.link}
+                    profession={TEAM_MEMBERS.Sofia.profession}
+                    description={TEAM_MEMBERS.Sofia.description}
                 />
+                <CardFounder
+                    name={TEAM_MEMBERS.Julieta.fullName}
+                    image={TEAM_MEMBERS.Julieta.logo}
+                    github={TEAM_MEMBERS.Julieta.gitHub}
+                    linkedin={TEAM_MEMBERS.Julieta.linkedin}
+                    link={TEAM_MEMBERS.Julieta.link}
+                    profession={TEAM_MEMBERS.Julieta.profession}
+                    description={TEAM_MEMBERS.Julieta.description}
+                />
+                <CardFounder
+                    name={TEAM_MEMBERS.Santiago.fullName}
+                    image={TEAM_MEMBERS.Santiago.logo}
+                    github={TEAM_MEMBERS.Santiago.gitHub}
+                    linkedin={TEAM_MEMBERS.Santiago.linkedin}
+                    link={TEAM_MEMBERS.Santiago.link}
+                    profession={TEAM_MEMBERS.Santiago.profession}
+                    description={TEAM_MEMBERS.Santiago.description}
+                />
+                <CardFounder
+                    name={TEAM_MEMBERS.Paula.fullName}
+                    image={TEAM_MEMBERS.Paula.logo}
+                    github={TEAM_MEMBERS.Paula.gitHub}
+                    linkedin={TEAM_MEMBERS.Paula.linkedin}
+                    link={TEAM_MEMBERS.Paula.link}
+                    profession={TEAM_MEMBERS.Paula.profession}
+                    description={TEAM_MEMBERS.Paula.description}
+                />
+                <p set:html={t("about.team.values")} />
+
+                <h2 set:html={t("about.philosophy.title")} />
+                <p set:html={t("about.philosophy.description")} />
+                <ul>
+                    <li set:html={t("about.philosophy.learningDept")} />
+                    <li set:html={t("about.philosophy.profitDept")} />
+                </ul>
+                <p set:html={t("about.philosophy.motto")} />
+
+                <h2 set:html={t("about.values.title")} />
+                <ul>
+                    <li set:html={t("about.values.teamwork")} />
+                    <li set:html={t("about.values.trust")} />
+                    <li set:html={t("about.values.commitment")} />
+                    <li set:html={t("about.values.conflictResolution")} />
+                </ul>
+
+                <h2 set:html={t("about.purpose.title")} />
+                <ul>
+                    <li set:html={t("about.purpose.learn")} />
+                    <li set:html={t("about.purpose.impact")} />
+                </ul>
+                <p set:html={t("about.purpose.summary")} />
+
+                <h2 set:html={t("about.vision.title")} />
+                <p set:html={t("about.vision.description")} />
+
+                <h2 set:html={t("about.contact.title")} />
+                <p set:html={t("about.contact.description")} />
             </div>
-            <p set:html={t("about.team.values")} />
-
-            <h2 set:html={t("about.philosophy.title")} />
-            <p set:html={t("about.philosophy.description")} />
-            <ul>
-                <li set:html={t("about.philosophy.learningDept")} />
-                <li set:html={t("about.philosophy.profitDept")} />
-            </ul>
-            <p set:html={t("about.philosophy.motto")} />
-
-            <h2 set:html={t("about.values.title")} />
-            <ul>
-                <li set:html={t("about.values.teamwork")} />
-                <li set:html={t("about.values.trust")} />
-                <li set:html={t("about.values.commitment")} />
-                <li set:html={t("about.values.conflictResolution")} />
-            </ul>
-
-            <h2 set:html={t("about.purpose.title")} />
-            <ul>
-                <li set:html={t("about.purpose.learn")} />
-                <li set:html={t("about.purpose.impact")} />
-            </ul>
-            <p set:html={t("about.purpose.summary")} />
-
-            <h2 set:html={t("about.vision.title")} />
-            <p set:html={t("about.vision.description")} />
-
-            <h2 set:html={t("about.contact.title")} />
-            <p set:html={t("about.contact.description")} />
         </div>
+        <style>
+            .cards {
+                display: flex;
+                flex-wrap: wrap;
+                justify-content: center;
+                gap: 1rem;
+            }
+            @media (width <= 37.5rem) {
+                .cards {
+                    margin-top: 4em;
+                }
+            }
+            @media (width <= 27.5rem) {
+                .cards {
+                    margin-top: 5em;
+                }
+            }
+        </style>
     </section>
-    <style>
-        .cards {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            gap: 1rem;
-        }
-        @media (width <= 37.5rem) {
-            .cards {
-                margin-top: 4em;
-            }
-        }
-        @media (width <= 27.5rem) {
-            .cards {
-                margin-top: 5em;
-            }
-        }
-    </style>
 </Layout>
