--- a/src/components/CardFounder.astro
+++ b/src/components/CardFounder.astro
@@ -49,8 +49,12 @@ const lang = getLangFromUrl(Astro.url);
         width: 75vw;
         max-width: 40.625rem;
         padding: 2.75rem 1.875rem 2.75rem 1.25rem;
-        background: var(--card);
+        background: white;
+        box-shadow: 0px 0px 44px -10px rgba(0, 0, 0, 0.55);
         border-radius: 1.5rem;
+    }
+    html.dark .card {
+        background: var(--card);
     }
     .card:hover {
         cursor: pointer;
@@ -132,9 +136,12 @@ const lang = getLangFromUrl(Astro.url);
             height: 50vw;
             width: 50vw;
             border-radius: 50%;
-            border: 0.75rem solid var(--card);
+            border: 0.75rem solid white;
             box-shadow: none;
             margin: -8.75rem 0 1.875rem 0;
+        }
+        html.dark .card img {
+            border: 0.75rem solid var(--card);
         }
         .card {
             margin: 2.3rem 0;
