--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -9,16 +9,16 @@ const today = new Date();
 
 <footer>
     <div class="social-links">
-        <a href="https://github.com/CROBF-arg" target="_blank">
+        <a href="https://github.com/CROBF-arg" target="_blank" aria-label="Link del GitHub de CROBF">
             <Github />
         </a>
-        <a href="https://www.linkedin.com/company/crobf/">
+        <a href="https://www.linkedin.com/company/crobf/" target="_blank" aria-label="Link del Linkedin de CROBF">
             <Linkedin />
         </a>
-        <a href="https://x.com/CROBF_arg" target="_blank">
+        <a href="https://x.com/CROBF_arg" target="_blank" aria-label="Link del X de CROBF">
             <X />
         </a>
-        <a href="https://www.instagram.com/crobf_arg/">
+        <a href="https://www.instagram.com/crobf_arg/" target="_blank" aria-label="Link del Instagram de CROBF">
             <Instagram />
         </a>
     </div>
