add: background icons design

--- a/src/styles/dark.scss
+++ b/src/styles/dark.scss
@@ -1,7 +1,7 @@
 html.dark {
 
     body {
-        background: #333 !important;
+        background: #39445B !important;
         color: rgb(var(--white)) !important;
     }
 
