--- a/src/pages/[lang]/about.astro
+++ b/src/pages/[lang]/about.astro
@@ -1,6 +1,7 @@
 ---
-import Layout from "../../layouts/BlogPost.astro";
+import Layout from "../../layouts/Layout.astro";
 import CardFounder from "../../components/CardFounder.astro";
+import PhilosophyCards from "../../components/PhilosophyCards.astro";
 import { SITE_TITLE, TEAM_MEMBERS } from "../../consts";
 import { useTranslations, getLangFromUrl } from "../../i18n/translate";
 export function getStaticPaths() {
@@ -16,14 +17,12 @@ export function getStaticPaths() {
 const t = useTranslations(getLangFromUrl(Astro.url));
 ---
 
-<Layout
-    title={`${t("about.title")} - ${SITE_TITLE}`}
-    description={t("about.description") as string}
-    heroImage="/blog-placeholder-about.jpg">
-    <section id="about-us">
+<Layout title={`${t("about.title")} - ${SITE_TITLE}`} description={t("about.description") as string}>
+    <main style="position: relative;">
         <div class="container">
-            <p set:html={t("about.welcome")} />
-            <h2 set:html={t("about.whoWeAre.title")} />
+            <h1 class="title">{t("about.title")} - <span>CROBF</span></h1>
+            <p class="welcome">{t("about.welcome")}</p>
+            <h2 class="whoWeAre">{t("about.whoWeAre.title")}</h2>
             <p set:html={t("about.whoWeAre.description")} />
             <div class="cards">
                 <CardFounder
@@ -91,15 +90,12 @@ const t = useTranslations(getLangFromUrl(Astro.url));
                 />
                 <p set:html={t("about.team.values")} />
 
-                <h2 set:html={t("about.philosophy.title")} />
+                <h2 class="philosophy">{t("about.philosophy.title")}</h2>
                 <p set:html={t("about.philosophy.description")} />
-                <ul>
-                    <li set:html={t("about.philosophy.learningDept")} />
-                    <li set:html={t("about.philosophy.profitDept")} />
-                </ul>
+                <PhilosophyCards />
                 <p set:html={t("about.philosophy.motto")} />
 
-                <h2 set:html={t("about.values.title")} />
+                <h2 class="values">{t("about.values.title")}</h2>
                 <ul>
                     <li set:html={t("about.values.teamwork")} />
                     <li set:html={t("about.values.trust")} />
@@ -121,23 +117,42 @@ const t = useTranslations(getLangFromUrl(Astro.url));
                 <p set:html={t("about.contact.description")} />
             </div>
         </div>
-        <style>
+    </main>
+    <style>
+        .title {
+            font-size: 40px;
+        }
+        .title span {
+            color: var(--accent);
+        }
+        .whoWeAre {
+            font-size: 36px;
+        }
+        .philosophy {
+            font-size: 36px;
+            text-align: left;
+            width: 100%;
+        }
+        .values {
+            font-size: 36px;
+            text-align: left;
+            width: 100%;
+        }
+        .cards {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            gap: 1rem;
+        }
+        @media (width <= 37.5rem) {
             .cards {
-                display: flex;
-                flex-wrap: wrap;
-                justify-content: center;
-                gap: 1rem;
+                margin-top: 4em;
             }
-            @media (width <= 37.5rem) {
-                .cards {
-                    margin-top: 4em;
-                }
+        }
+        @media (width <= 27.5rem) {
+            .cards {
+                margin-top: 5em;
             }
-            @media (width <= 27.5rem) {
-                .cards {
-                    margin-top: 5em;
-                }
-            }
-        </style>
-    </section>
+        }
+    </style>
 </Layout>
