some changes for styles

--- a/src/components/CardFounder.astro
+++ b/src/components/CardFounder.astro
@@ -38,11 +38,9 @@ const lang = getLangFromUrl(Astro.url);
 <style>
     :root {
         --gradient: linear-gradient(45deg, #ff7c7d, #ffda67);
-        --card: #272524;
+        --card: #39445b;
     }
-    p:hover {
-        color: white;
-    }
+
     .card {
         display: flex;
         align-items: center;
