--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -32,7 +32,7 @@ const today = new Date();
         text-align: center;
     }
     html.dark footer {
-        background: #333 !important;
+        background: #39445b !important;
         color: rgb(var(--white)) !important;
     }
     .social-links {
