--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -63,9 +63,10 @@ const t = useTranslations(lang);
         box-shadow: 0 2px 4px rgba(var(--black), 0.2);
         position: sticky;
         top: 0;
+        z-index: 1;
     }
     html.dark header {
-        background-color: #333;
+        background-color: #39445b;
     }
     h2 {
         margin: 0;
