fix color paragrhap

--- a/src/components/PhilosophyCards.astro
+++ b/src/components/PhilosophyCards.astro
@@ -1,4 +1,5 @@
 ---
+interface Props {}
 import { useTranslations, getLangFromUrl } from "../i18n/translate";
 export function getStaticPaths() {
     return [
