--- a/src/pages/[lang]/about.astro
+++ b/src/pages/[lang]/about.astro
@@ -21,7 +21,7 @@ const t = useTranslations(getLangFromUrl(Astro.url));
     <main style="position: relative;">
         <div class="container">
             <h1 class="title">{t("about.title")} - <span>CROBF</span></h1>
-            <p class="welcome">{t("about.welcome")}</p>
+            <p set:html={t("about.welcome")} />
             <h2 class="whoWeAre">{t("about.whoWeAre.title")}</h2>
             <p set:html={t("about.whoWeAre.description")} />
             <div class="cards">
