--- a/src/pages/[lang]/index.astro
+++ b/src/pages/[lang]/index.astro
@@ -1,11 +1,10 @@
 ---
 import Layout from "../../layouts/Layout.astro";
 import CardProyect from "../../components/CardProyect.astro";
-import { SITE_DESCRIPTION, TEAM_MEMBERS } from "../../consts";
+import { SITE_DESCRIPTION } from "../../consts";
 import { useTranslations, getLangFromUrl } from "../../i18n/translate";
-const FOUNDERS = Object.values(TEAM_MEMBERS).sort((a, b) => a.index - b.index);
-const t = useTranslations(getLangFromUrl(Astro.url));
 const lang = getLangFromUrl(Astro.url);
+const t = useTranslations(lang);
 ---
 
 <Layout title="CROBF - Equipo de desarrollo" description={SITE_DESCRIPTION}>
