--- a/src/pages/[lang]/about.astro
+++ b/src/pages/[lang]/about.astro
@@ -99,82 +99,68 @@ const t = useTranslations(getLangFromUrl(Astro.url));
 
                 <h2 class="values" set:html={t("about.values.title")} />
                 <Values />
-                
-
                 <h2 class="purpose" set:html={t("about.purpose.title")} />
                 <Purpose />
                 <p set:html={t("about.purpose.summary")} />
 
                 <h2 class="future" set:html={t("about.vision.title")} />
                 <p set:html={t("about.vision.description")} />
-            <div class="whoWeAre">
-                <h2 class="contact" set:html={t("about.contact.title")} />
-                <p set:html={t("about.contact.description")} />
-            </div>
+                <div class="whoWeAre">
+                    <h2 class="contact" set:html={t("about.contact.title")} />
+                    <p set:html={t("about.contact.description")} />
+                </div>
             </div>
         </div>
     </main>
-    <style>
-        .motto {
-            color: var(--accent);
-            font-size: 30px;
-        }
-        .title {
-            font-size: 40px;
-        }
-        .title span {
-            color: var(--accent);
-        }
-        .whoWeAre {
-            font-size: 36px;
-        }
-        .philosophy {
-            font-size: 36px;
-            text-align: left;
-            width: 100%;
-        }
-        .cards {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            gap: 1rem;
-        }
-        @media (width <= 37.5rem) {
-            .cards {
-                margin-top: 4em;
-            }
-        }
-        @media (width <= 27.5rem) {
-            .cards {
-                margin-top: 5em;
-            }
-            h2.values{
-                text-align: left !important;
-                width: 100%;
-            }
-
-            h2.purpose{
-                text-align: left !important;
-                width: 100%;
-            }
-
-            h2.future{
-                text-align: left !important;
-                width: 100%;
-            }
-            h2.contact{
-                text-align: left !important;
-                width: 100%;
-            }
-            .whoWeAre{
-                border: solid 3px blue;
-                border-radius: 40px;
-                padding: 10px;
-            }
-
-
-
-    
-        </style>
-    </section>
 </Layout>
+<style>
+    .motto {
+        color: var(--accent);
+        font-size: 30px;
+    }
+    .title {
+        font-size: 40px;
+    }
+    .title span {
+        color: var(--accent);
+    }
+    .philosophy {
+        font-size: 36px;
+        text-align: left;
+        width: 100%;
+    }
+    .cards {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        gap: 1rem;
+    }
+    .values {
+        width: 100%;
+        font-size: 36px;
+    }
+    .purpose {
+        width: 100%;
+        font-size: 36px;
+    }
+    .future {
+        width: 100%;
+        font-size: 36px;
+    }
+
+    .whoWeAre {
+        border: solid 3px blue;
+        border-radius: 40px;
+        padding: 10px;
+    }
+    @media (width <= 37.5rem) {
+        .cards {
+            margin-top: 4em;
+        }
+    }
+    @media (width <= 27.5rem) {
+        .cards {
+            margin-top: 5em;
+        }
+    }
+</style>
