fix more designs

--- a/src/components/FormContact.astro
+++ b/src/components/FormContact.astro
@@ -67,6 +67,7 @@ const t = useTranslations(lang);
 <style>
     .contact-form {
         width: 800px;
+        box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.75);
     }
     .result {
         display: none;
@@ -96,7 +97,7 @@ const t = useTranslations(lang);
         border-radius: 10px;
     }
     html.dark .contact-form {
-        background-color: #444444;
+        background-color: #39445b;
     }
 
     .contact-form label {
@@ -143,8 +144,9 @@ const t = useTranslations(lang);
     }
     html.dark .contact-form input,
     html.dark .contact-form textarea {
-        background-color: #333;
+        background-color: #39445b;
         color: white;
+        box-shadow: 0px 0px 2px 0px rgba(0, 0, 0, 0.75);
     }
     .contact-form input:focus,
     .contact-form textarea:focus {
