--- a/src/pages/[lang]/index.astro
+++ b/src/pages/[lang]/index.astro
@@ -30,10 +30,10 @@ const t = useTranslations(lang);
                 link="https://full-lite.vercel.app/"
             />
             <CardProyect
-                name="CROBF-UI"
-                description="Librería de componentes para CSS"
-                image="/projects/logo-ui.png"
-                link="https://crobf-ui.vercel.app/"
+                name="HexaDevs"
+                description="Academia online de programación"
+                image="/projects/hexadevs.png"
+                link="https://hexadevs.crobf.tech/"
             />
         </div>
     </main>
