--- a/src/components/Purpose.astro
+++ b/src/components/Purpose.astro
@@ -16,8 +16,16 @@ const t = useTranslations(getLangFromUrl(Astro.url));
 ---
 
 <div class="CardsContainer">
-    <PurposeCards image="/svg/aprender.svg" description={t("about.purpose.learn")} />
-    <PurposeCards image="/svg/impacto.svg" description={t("about.purpose.impact")} />
+    <PurposeCards
+        image="/svg/aprender.svg"
+        title={t("about.purpose.learn-title")}
+        description={t("about.purpose.learn")}
+    />
+    <PurposeCards
+        image="/svg/impacto.svg"
+        title={t("about.purpose.impact-title")}
+        description={t("about.purpose.impact")}
+    />
 </div>
 
 <style>
