--- a/src/components/ServicesGrid.astro
+++ b/src/components/ServicesGrid.astro
@@ -1,4 +1,5 @@
 ---
+interface Props {}
 import { useTranslations, getLangFromUrl } from "../i18n/translate";
 export function getStaticPaths() {
     return [
