--- a/src/components/ValuesCards.astro
+++ b/src/components/ValuesCards.astro
@@ -1,22 +1,33 @@
 ---
-const { image,description} = Astro.props;
+const { image, title, description } = Astro.props;
 ---
+
 <div>
-    <img src={image} alt="Card Image" class="card-img">
-    <p set:html={description}></p>
+    <figure>
+        <img src={image} alt="Card Image" class="card-img" />
+    </figure>
+    <h5>{title}</h5>
+    <p set:html={description} />
 </div>
 
-
 <style>
-    div{
+    div {
         padding: 10px;
         border-radius: 20px;
+        max-width: 300px;
     }
     .card-img {
-        width:80%; 
         max-height: auto;
         object-fit: cover;
         border-radius: 10px;
     }
-
+    figure {
+        text-align: center;
+    }
+    h5 {
+        color: var(--accent);
+        font-size: 22px;
+        text-align: center;
+        width: 100%;
+    }
 </style>
