fix - of keys in transtales change for .

--- a/src/components/Purpose.astro
+++ b/src/components/Purpose.astro
@@ -18,7 +18,7 @@ const t = useTranslations(getLangFromUrl(Astro.url));
 <div class="CardsContainer">
     <PurposeCards
         image="/svg/aprender.svg"
-        title={t("about.purpose.learn-title")}
+        title={t("about.purpose.learn.title")}
         description={t("about.purpose.learn")}
     />
     <PurposeCards
