--- a/src/components/Purpose.astro
+++ b/src/components/Purpose.astro
@@ -23,7 +23,7 @@ const t = useTranslations(getLangFromUrl(Astro.url));
     />
     <PurposeCards
         image="/svg/impacto.svg"
-        title={t("about.purpose.impact-title")}
+        title={t("about.purpose.impact.title")}
         description={t("about.purpose.impact")}
     />
 </div>
