hot fix langs in cards proyects

--- a/src/pages/[lang]/index.astro
+++ b/src/pages/[lang]/index.astro
@@ -25,13 +25,13 @@ const t = useTranslations(lang);
             <h2>{t("projects.title")}</h2>
             <CardProyect
                 name="FullLite"
-                description="Template ligero para aplicaciones full stack"
+                description={t("projects.description1")}
                 image="/projects/animal.svg"
                 link="https://full-lite.vercel.app/"
             />
             <CardProyect
                 name="HexaDevs"
-                description="Academia online de programación"
+                description={t("projects.description2")}
                 image="/projects/hexadevs.png"
                 link="https://hexadevs.crobf.tech/"
             />
