fix last article

--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -50,6 +50,8 @@ const { title, description, pubDate, updatedDate, heroImage, author } = Astro.pr
             margin: 0 auto;
             border-radius: 12px;
             box-shadow: var(--box-shadow);
+            max-height: 700px;
+            object-fit: cover;
         }
         .prose {
             width: 800px;
