--- a/src/components/CardFounder.astro
+++ b/src/components/CardFounder.astro
@@ -81,7 +81,7 @@ const lang = getLangFromUrl(Astro.url);
         font-size: 0.975rem;
         font-weight: 400;
         margin: 0;
-        color: rgba(255, 255, 255, 0.7);
+        color: black;
     }
     html.dark .card h3 {
         color: black;
@@ -91,10 +91,10 @@ const lang = getLangFromUrl(Astro.url);
         font-size: 1rem;
         font-weight: 400;
         margin-bottom: 1.875rem;
-        color: rgba(255, 255, 255, 0.5);
+        color: black;
     }
     html.dark .card p {
-        color: black;
+        color: whitesmoke;
     }
 
     .socials {
