add 3 new member profile page

--- a/src/pages/[lang]/about.astro
+++ b/src/pages/[lang]/about.astro
@@ -46,6 +46,24 @@ const t = useTranslations(getLangFromUrl(Astro.url));
                     description={TEAM_MEMBERS.Ezequiel.description}
                 />
                 <CardFounder
+                    name={TEAM_MEMBERS.Leandro.fullname}
+                    image={TEAM_MEMBERS.Leandro.logo}
+                    github={TEAM_MEMBERS.Leandro.gitHub}
+                    linkedin={TEAM_MEMBERS.Leandro.linkedin}
+                    link={TEAM_MEMBERS.Leandro.link}
+                    profession={TEAM_MEMBERS.Leandro.profession}
+                    description={TEAM_MEMBERS.Leandro.description}
+                />
+                <CardFounder
+                    name={TEAM_MEMBERS.Joaquin.fullname}
+                    image={TEAM_MEMBERS.Joaquin.logo}
+                    github={TEAM_MEMBERS.Joaquin.gitHub}
+                    linkedin={TEAM_MEMBERS.Joaquin.linkedin}
+                    link={TEAM_MEMBERS.Joaquin.link}
+                    profession={TEAM_MEMBERS.Joaquin.profession}
+                    description={TEAM_MEMBERS.Joaquin.description}
+                />
+                <CardFounder
                     name={TEAM_MEMBERS.Lautaro.fullName}
                     image={TEAM_MEMBERS.Lautaro.logo}
                     github={TEAM_MEMBERS.Lautaro.gitHub}
@@ -53,6 +71,15 @@ const t = useTranslations(getLangFromUrl(Astro.url));
                     link={TEAM_MEMBERS.Lautaro.link}
                     profession={TEAM_MEMBERS.Lautaro.profession}
                     description={TEAM_MEMBERS.Lautaro.description}
+                />
+                <CardFounder
+                    name={TEAM_MEMBERS.Briana.fullname}
+                    image={TEAM_MEMBERS.Briana.logo}
+                    github={TEAM_MEMBERS.Briana.gitHub}
+                    linkedin={TEAM_MEMBERS.Briana.linkedin}
+                    link={TEAM_MEMBERS.Briana.link}
+                    profession={TEAM_MEMBERS.Briana.profession}
+                    description={TEAM_MEMBERS.Briana.description}
                 />
                 <CardFounder
                     name={TEAM_MEMBERS.Sofia.fullName}
